JW7-1342 Fix ad skip button and overlay ads on small player

--- a/src/css/flags/touch.less
+++ b/src/css/flags/touch.less
@@ -1,7 +1,7 @@
 @import "../imports/icons";
 
 .jw-flag-touch {
-    .jw-controlbar {
+    .jw-controlbar, .jw-skip, .jw-plugin {
         font-size: 1.5em;
     }
 
